// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MenuSelect should render <MenuSelect /> with custom templates 1`] = `
Array [
  <div
    className="root"
  >
    <select
      className="select"
      onChange={[Function]}
      value=""
    >
      Array [
        <option
          className="option"
          dangerouslySetInnerHTML={
            Object {
              "__html": "defaultOption",
            }
          }
          value=""
        />,
      ]
      Array [
        <option
          className="option"
          dangerouslySetInnerHTML={
            Object {
              "__html": "foo",
            }
          }
          value="foo"
        />,
      ]
      Array [
        <option
          className="option"
          dangerouslySetInnerHTML={
            Object {
              "__html": "bar",
            }
          }
          value="bar"
        />,
      ]
    </select>
  </div>,
]
`;

exports[`MenuSelect should render <MenuSelect /> with items 1`] = `
Array [
  <div
    className="root"
  >
    <select
      className="select"
      onChange={[Function]}
      value=""
    >
      Array [
        <option
          className="option"
          dangerouslySetInnerHTML={
            Object {
              "__html": "See all",
            }
          }
          value=""
        />,
      ]
      Array [
        <option
          className="option"
          dangerouslySetInnerHTML={
            Object {
              "__html": "foo ()",
            }
          }
          value="foo"
        />,
      ]
      Array [
        <option
          className="option"
          dangerouslySetInnerHTML={
            Object {
              "__html": "bar ()",
            }
          }
          value="bar"
        />,
      ]
    </select>
  </div>,
]
`;

exports[`MenuSelect should render <MenuSelect /> with no items 1`] = `
Array [
  <div
    className="root noRefinementRoot"
  >
    <select
      className="select"
      onChange={[Function]}
      value=""
    >
      Array [
        <option
          className="option"
          dangerouslySetInnerHTML={
            Object {
              "__html": "See all",
            }
          }
          value=""
        />,
      ]
    </select>
  </div>,
]
`;
